--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <p class="hero__card-text">
                 Инженер свяжется с вами в течение 15 минут для уточнения деталей.
               </p>
-              <button class="btn btn--full btn--accent js-open-modal" data-modal="request-modal">Оставить заявку</button>
+              <button class="btn btn--full btn--accent js-open-modal" data-modal="request-modal" data-request-type="urgent">Оставить заявку</button>
               <p class="form__note">Выезд бесплатно. Диагностика от 10 000 рублей.</p>
             </div>
           </div>
@@ -124,7 +124,7 @@
                 <li>Гарантия на работы и запчасти</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Вызвать инженера</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт котла">Заказать ремонт</button>
                 <button class="btn btn--ghost js-scroll-to" data-target="#faq">Подробнее</button>
               </div>
             </article>
@@ -140,7 +140,7 @@
                 <li>Пусконаладка и настройка автоматики</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Вызвать инженера</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="монтаж системы отопления">Заказать монтаж</button>
                 <button class="btn btn--ghost js-scroll-to" data-target="#works">Подробнее</button>
               </div>
             </article>
@@ -156,7 +156,7 @@
                 <li>Экстренный выезд 24/7</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Вызвать инженера</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="обслуживание парогенератора">Заказать обслуживание</button>
                 <button class="btn btn--ghost js-scroll-to" data-target="#works">Подробнее</button>
               </div>
             </article>
@@ -174,7 +174,7 @@
                 <li>Срочный выезд инженера</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Вызвать инженера</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт промышленного котла">Заказать услугу</button>
                 <button class="btn btn--ghost js-scroll-to" data-target="#faq">Подробнее</button>
               </div>
             </article>
