--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
                 <li>Ремонт автоматики и электроники</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Заказать ремонт</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт котла">Заказать ремонт</button>
               </div>
             </article>
 
@@ -111,7 +111,7 @@
                 <li>Гарантийное и постгарантийное обслуживание</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Заказать монтаж</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="монтаж системы отопления">Заказать монтаж</button>
               </div>
             </article>
 
@@ -128,7 +128,7 @@
                 <li>Настройка режимов работы</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Заказать обслуживание</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="обслуживание парогенератора">Заказать обслуживание</button>
               </div>
             </article>
 
@@ -147,7 +147,7 @@
                 <li>Гидравлические испытания</li>
               </ul>
               <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal">Заказать услугу</button>
+                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт промышленного котла">Заказать услугу</button>
               </div>
             </article>
           </div>
