--- a/index.html
+++ b/index.html
@@ -104,80 +104,15 @@
         </div>
       </section>
 
-      <!-- Services -->
+      <!-- Services navigation (without duplicated cards) -->
       <section class="section section--grey" id="services" aria-labelledby="services-title">
         <div class="container">
           <h2 class="section__title" id="services-title">Услуги Мастер котлов</h2>
           <p class="section__subtitle">
-            Ремонт, монтаж, техническое обслуживание газовых, твердотопливных, жидкотопливных и промышленных котлов.
+            Полный список услуг с подробным описанием, примерами работ и дополнительными опциями доступен на отдельной странице.
           </p>
-
-          <div class="cards cards--services">
-            <article class="card">
-              <h3 class="card__title">Ремонт котлов в Москве</h3>
-              <p class="card__text">
-                Диагностика и ремонт газовых, твердотопливных и жидкотопливных котлов с гарантией.
-              </p>
-              <ul class="card__list">
-                <li>Срочный выезд мастера</li>
-                <li>Оригинальные запчасти</li>
-                <li>Гарантия на работы и запчасти</li>
-              </ul>
-              <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт котла">Заказать ремонт</button>
-                <button class="btn btn--ghost js-scroll-to" data-target="#faq">Подробнее</button>
-              </div>
-            </article>
-
-            <article class="card">
-              <h3 class="card__title">Монтаж системы отопления</h3>
-              <p class="card__text">
-                Проектирование, установка, автоматизация и обслуживание котельных и систем отопления в Москве и области.
-              </p>
-              <ul class="card__list">
-                <li>Разработка проекта отопления</li>
-                <li>Монтаж «под ключ»</li>
-                <li>Пусконаладка и настройка автоматики</li>
-              </ul>
-              <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="монтаж системы отопления">Заказать монтаж</button>
-                <button class="btn btn--ghost js-scroll-to" data-target="#works">Подробнее</button>
-              </div>
-            </article>
-
-            <article class="card">
-              <h3 class="card__title">Обслуживание парогенераторов</h3>
-              <p class="card__text">
-                Ремонт, монтаж и техническое обслуживание промышленных парогенераторов и паровых котлов.
-              </p>
-              <ul class="card__list">
-                <li>Регулярное ТО оборудования</li>
-                <li>Чистка и промывка</li>
-                <li>Экстренный выезд 24/7</li>
-              </ul>
-              <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="обслуживание парогенератора">Заказать обслуживание</button>
-                <button class="btn btn--ghost js-scroll-to" data-target="#works">Подробнее</button>
-              </div>
-            </article>
-
-            <article class="card">
-              <h3 class="card__title">
-                Ремонт и техническое обслуживание промышленных котлов
-              </h3>
-              <p class="card__text">
-                Многолетний опыт в ремонте и обслуживании промышленных водогрейных и паровых котлов.
-              </p>
-              <ul class="card__list">
-                <li>Комплексная диагностика</li>
-                <li>Плановое и аварийное обслуживание</li>
-                <li>Срочный выезд инженера</li>
-              </ul>
-              <div class="card__actions">
-                <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт промышленного котла">Заказать услугу</button>
-                <button class="btn btn--ghost js-scroll-to" data-target="#faq">Подробнее</button>
-              </div>
-            </article>
+          <div class="section__actions">
+            <a href="services.html" class="btn btn--primary btn--lg">Перейти на страницу услуг</a>
           </div>
         </div>
       </section>
