--- a/services.html
+++ b/services.html
@@ -95,6 +95,7 @@
               </ul>
               <div class="card__actions">
                 <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт котла">Заказать ремонт</button>
+                <button class="btn btn--ghost js-scroll-to" data-target="#additional-services">Подробнее</button>
               </div>
             </article>
 
@@ -112,6 +113,7 @@
               </ul>
               <div class="card__actions">
                 <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="монтаж системы отопления">Заказать монтаж</button>
+                <button class="btn btn--ghost js-scroll-to" data-target="#additional-services">Подробнее</button>
               </div>
             </article>
 
@@ -129,6 +131,7 @@
               </ul>
               <div class="card__actions">
                 <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="обслуживание парогенератора">Заказать обслуживание</button>
+                <button class="btn btn--ghost js-scroll-to" data-target="#additional-services">Подробнее</button>
               </div>
             </article>
 
@@ -148,6 +151,7 @@
               </ul>
               <div class="card__actions">
                 <button class="btn btn--primary js-open-modal" data-modal="request-modal" data-request-topic="ремонт промышленного котла">Заказать услугу</button>
+                <button class="btn btn--ghost js-scroll-to" data-target="#additional-services">Подробнее</button>
               </div>
             </article>
           </div>
